--- a/projects/CMakeLists.txt
+++ b/projects/CMakeLists.txt
@@ -52,4 +52,5 @@ add_subdirectory(oit_demo)
 if (PPX_BUILD_XR)
 add_subdirectory(04_cube_xr)
 add_subdirectory(fishtornado_xr)
+add_subdirectory(11_compressed_texture_xr)
 endif()
