Combine FDM & VRS wip:
VRS supported. Temporarily disabling FDM

--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ subprojects {
     android {
         namespace 'com.google.bigwheels'
         compileSdk 32
+        android.ndkVersion "25.2.9519653"
 
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_8
